# atomacos

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.txt  CONTRIBUTING.md  README.md  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  tox.ini
_generated/api/: atomacos.html  modules.html
_sources/: index.rst.txt
_sources/_generated/api/: atomacos.rst.txt  modules.rst.txt
atomac/: AXClasses.py  _a11y.py
atomacos/: AXCallbacks.py  AXClasses.py  AXKeyCodeConstants.py  AXKeyboard.py  Clipboard.py  Prefs.py  __init__.py  __old_init__.py  _a11y.py  _base_ax_ui_element.py  _converter.py  _macos.py  _notification.py  _objc_ax.py  a11y.py  converter.py  errors.py  keyboard.py  mixin.py  mouse.py  notification.py  support.py
atomacos/_mixin/: __init__.py  _input.py  _wait.py
atomacos/ldtp/: __init__.py  client.py
atomacos/ldtpd/: __init__.py  combo_box.py  constants.py  core.py  generic.py  keypress_actions.py  menu.py  mouse.py  page_tab_list.py  server_exception.py  table.py  test.py  text.py  utils.py  value.py
atomacos/mixin/: __init__.py  _input.py  _search.py  _wait.py
atomacos/ooldtp/: __init__.py  client_exception.py  log.py
docs/: conf.py  index.rst
scripts/: build-docs-prod.sh  deploy-pre.sh  deploy-prod.sh  deploy.sh
tests/: conftest.py  test_atomacos.py  test_input.py  test_package_functions.py  test_prefs.py  test_readme_examples.py  test_search_methods.py  test_uielement.py  test_utils.py  test_wait_for_methods.py
