[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "atomacos"
author = "Davee Nguyen"
author-email = "davee@daveenguyen.com"
home-page = "https://github.com/davee_nguyen/atomacos"
classifiers = ["License :: Other/Proprietary License"]
requires = [
    "pyobjc-core>=3.0.4",
    "pyobjc-framework-Cocoa>=3.0.4",
    "pyobjc-framework-Quartz>=3.0.4",
    "pyobjc-framework-ApplicationServices>=3.0.4",
    "pyobjc-framework-CoreText>=3.0.4",
    "future",
]

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "pre-commit",
    "tox",
    "bump2version"
]
test = [
    "pytest",
    "pytest-cov",
]
doc = ["sphinx", "m2r"]

[tool.black]
line-length = 79
