[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "atomacos"
author = "Davee Nguyen"
author-email = "davee@daveenguyen.com"
home-page = "https://github.com/daveenguyen/atomacos"
requires = [
    "pyobjc-core>=3.0.4",
    "pyobjc-framework-Cocoa>=3.0.4",
    "pyobjc-framework-Quartz>=3.0.4",
    "pyobjc-framework-ApplicationServices>=3.0.4",
    "pyobjc-framework-CoreText>=3.0.4",
    "pyscreeze<0.1.20",
    "pyautogui<0.9.42",
    "future",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: MacOS X :: Cocoa",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Objective C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: User Interfaces",
]
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "pre-commit",
    "tox",
]
test = [
    "pytest",
    "pytest-cov",
]
doc = ["sphinx", "m2r"]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
